[FEAT] FolderService에서 각 폴더별 여행 수 조회 기능 구현